--- a/publication-web-resources/html/publication.html
+++ b/publication-web-resources/html/publication.html
@@ -17,7 +17,7 @@
     <div id="_idContainer000" class="_idGenMedia" data-mediaOnPageLoadActions="onMediaStart(selfContainerID,0.00,0);">
         <div class="_idGenObjectAttribute-1">
             <video id="_idVideo000" autoplay="autoplay" loop="loop" muted="muted" playsinline style="width:100%;height:100%;">
-                <source src="/Users/florianboesel/Desktop/MP4_Test/Heyna_Deck_Test_V2/publication-web-resources/video/heyna_reel_NEU.mp4" type="video/mp4" />
+                <source src="../video/Diverse_Assets_und_GIFS.mp4" type="video/mp4" />
                 Ihr Browser unterstützt dieses Videoformat nicht.
             </video>
         </div>
