--- a/publication-web-resources/html/publication.html
+++ b/publication-web-resources/html/publication.html
@@ -7,9 +7,9 @@
     <script src="../script/idGeneratedScript.js" type="text/javascript"></script>
     <style>
         video {
-            pointer-events: none; /* Verhindert Klicks */
-            width: 100%; /* Passt die Breite an */
-            height: 100%; /* Passt die Höhe an */
+            pointer-events: none; /* Prevent clicks on the video */
+            width: 100%; /* Ensure the video fills the container */
+            height: 100%; /* Ensure the video fills the container */
         }
     </style>
 </head>
@@ -17,7 +17,8 @@
     <div id="_idContainer000" class="_idGenMedia" data-mediaOnPageLoadActions="onMediaStart(selfContainerID,0.00,0);">
         <div class="_idGenObjectAttribute-1">
             <video id="_idVideo000" autoplay="autoplay" loop="loop" muted="muted" playsinline style="width:100%;height:100%;">
-                <source src="../video/Diverse_Assets_und_GIFS.mp4" type="video/mp4" />
+                <!-- Updated path to use the exact GitHub directory -->
+                <source src="publication-web-resources/video/heyna_reel_NEU.mp4" type="video/mp4" />
                 Ihr Browser unterstützt dieses Videoformat nicht.
             </video>
         </div>
@@ -42,3 +43,4 @@
     </div>
 </body>
 </html>
+
