--- a/publication-web-resources/html/publication.html
+++ b/publication-web-resources/html/publication.html
@@ -18,7 +18,7 @@
         <div class="_idGenObjectAttribute-1">
             <video id="_idVideo000" autoplay="autoplay" loop="loop" muted="muted" playsinline style="width:100%;height:100%;">
                 <!-- Updated path to use the exact GitHub directory -->
-                <source src="publication-web-resources/video/heyna_reel_NEU.mp4" type="video/mp4" />
+                <source src="../video/heyna_reel_NEU.mp4" type="video/mp4" />
                 Ihr Browser unterstützt dieses Videoformat nicht.
             </video>
         </div>
