--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
       align-items: center;
     }
 
-    /* Hide content until fully loaded */
-    body.hidden {
-      visibility: hidden;
-    }
-
     /* Fullscreen iframe */
     iframe {
       border: none;
@@ -58,58 +53,69 @@
     .next {
       right: 20px; /* Position to the right of the screen */
     }
+
+    /* Hide body until fully loaded */
+    body.hidden {
+      visibility: hidden;
+    }
   </style>
 </head>
 <body class="hidden">
   <!-- Responsive iframe -->
-  <iframe id="contentIFrame"></iframe>
+  <iframe id="contentIFrame" src="publication-web-resources/html/publication.html"></iframe>
 
   <!-- Navigation Arrows -->
   <div class="nav-arrow prev" onclick="showPreviousPage()">&#10094;</div>
   <div class="nav-arrow next" onclick="showNextPage()">&#10095;</div>
 
   <script>
-    let currentPage = 0; // Start with the first page
-    const totalPages = 30; // Total number of pages
+    // Variables to track current page
+    let currentPage = 0; // Start with publication.html
+    const totalPages = 30; // Total number of publication pages (0 to 29)
 
-    function preloadPage(url) {
-      const link = document.createElement("link");
-      link.rel = "prefetch";
-      link.href = url;
-      document.head.appendChild(link);
+    // Preload adjacent pages
+    function preloadAdjacentPages() {
+      const head = document.head;
+      const prevPage =
+        currentPage > 0
+          ? currentPage === 1
+            ? "publication-web-resources/html/publication.html"
+            : `publication-web-resources/html/publication-${currentPage - 1}.html`
+          : null;
+      const nextPage =
+        currentPage < totalPages - 1
+          ? `publication-web-resources/html/publication-${currentPage + 1}.html`
+          : null;
+
+      if (prevPage) {
+        const linkPrev = document.createElement("link");
+        linkPrev.rel = "prefetch";
+        linkPrev.href = prevPage;
+        head.appendChild(linkPrev);
+      }
+
+      if (nextPage) {
+        const linkNext = document.createElement("link");
+        linkNext.rel = "prefetch";
+        linkNext.href = nextPage;
+        head.appendChild(linkNext);
+      }
     }
 
+    // Update iframe source to load the correct page
     function updateIframeSource() {
       const iframe = document.getElementById("contentIFrame");
-      iframe.style.visibility = "hidden"; // Hide the iframe until loaded
 
-      // Determine current page URL
-      const currentPageUrl =
-        currentPage === 0
-          ? "publication-web-resources/html/publication.html"
-          : `publication-web-resources/html/publication-${currentPage}.html`;
-
-      iframe.src = currentPageUrl;
-
-      // Prefetch next and previous pages
-      if (currentPage > 0) {
-        const prevPageUrl =
-          currentPage === 1
-            ? "publication-web-resources/html/publication.html"
-            : `publication-web-resources/html/publication-${currentPage - 1}.html`;
-        preloadPage(prevPageUrl);
-      }
-      if (currentPage < totalPages - 1) {
-        const nextPageUrl = `publication-web-resources/html/publication-${currentPage + 1}.html`;
-        preloadPage(nextPageUrl);
+      if (currentPage === 0) {
+        iframe.src = "publication-web-resources/html/publication.html";
+      } else {
+        iframe.src = `publication-web-resources/html/publication-${currentPage}.html`;
       }
 
-      // Show iframe only when fully loaded
-      iframe.onload = () => {
-        iframe.style.visibility = "visible";
-      };
+      preloadAdjacentPages(); // Preload neighboring pages
     }
 
+    // Navigate to the previous page
     function showPreviousPage() {
       if (currentPage > 0) {
         currentPage--;
@@ -119,6 +125,7 @@
       }
     }
 
+    // Navigate to the next page
     function showNextPage() {
       if (currentPage < totalPages - 1) {
         currentPage++;
@@ -157,11 +164,11 @@
       iframe.style.top = `${(viewportHeight - contentHeight * scale) / 2}px`;
     }
 
-    // Initialize
+    // Show content only after everything is loaded
     window.onload = () => {
       document.body.classList.remove("hidden");
       resizeIframe();
-      updateIframeSource();
+      updateIframeSource(); // Ensure the correct page is loaded initially
     };
     window.onresize = resizeIframe;
   </script>
